src/style.css
/* ... */
body {
	margin: 0;
	padding: 0;
	background: rgba(0, 0, 0, 0.5);
	background: var(--color-bg);
	color: rgba(255, 255, 255, 0.9);
	min-height: 100vh;
	font-size: 87.5%;
	/* speocifically for mobile when keyboard is open */
	position: relative;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
		sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
}

h1 {
	margin-top: 0;
}

select,
input,
textarea {
	font-size: inherit;
	color: var(--color-text);
	background: #f7f9f7;
	border: 1px solid rgba(255, 255, 255, 0.09);
	border-bottom-color: rgba(255, 255, 255, 0.17);
	box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
	border-radius: 3px;
	padding: 10px;
	box-sizing: border-box;
}

[role='button'] {
	cursor: pointer;
}

a {
	text-decoration: none;
	color: #f7ae2d;
	cursor: pointer;
}

a:hover {
	text-decoration: underline;
}

p {
	line-height: 1.65;
}

button {
	font-family: inherit;
	font-size: 100%;
}

.hide {
	display: none !important;
}

.d-i {
	display: inline;
}
.flex {
	display: flex;
}

.flex-grow {
	flex-grow: 1;
}

.flex-v-center {
	align-items: center;
}

.flex-h-center {
	justify-content: center;
}

.flex-h-end {
	justify-content: flex-end;
}

.flex-shrink-0 {
	flex-shrink: 0;
}

.fr {
	float: right;
}

.relative {
	position: relative;
}

.tac {
	text-align: center;
}

.tar {
	text-align: right;
}

.va-m {
	vertical-align: middle;
}

.full-width {
	width: 100%;
}

.opacity--30 {
	opacity: 0.3;
}

.opacity--70 {
	opacity: 0.7;
}

.pointer-none {
	pointer-events: none;
}

.ml-1 {
	margin-left: 1rem;
}

.ml-2 {
	margin-left: 2rem;
}

.mb-1 {
	margin-bottom: 1rem;
}

.mb-2 {
	margin-bottom: 2rem;
}

.mt-1 {
	margin-top: 1rem;
}

.mt-2 {
	margin-top: 2rem;
}

.mb-0 {
	margin-bottom: 0;
}

.mt-0 {
	margin-top: 0;
}

.support-link {
	color: #f7ae2d;
}

@media screen and (max-width: 768px) {
	.block--mobile {
		display: block;
	}

	.ml-0--mobile {
		margin-left: 0rem;
	}

	.hide-on-mobile {
		display: none !important;
	}
}

@media screen and (min-width: 601px) {
	.show-on-mobile {
		display: none;
	}

	.flex--desk {
		display: flex;
	}
}

hr {
	background: 0;
	border: 0;
	border-bottom: 1px solid #0808081f;
	margin: 20px 0;
}

label {
	cursor: pointer;
}

[class*='hint--']:after {
	text-transform: none;
	font-weight: normal;
	letter-spacing: 0.5px;
	font-size: 14px;
}

.line {
	display: block;
	margin-bottom: 1em;
}

.caret {
	display: inline-block;
	width: 0;
	height: 0;
	border: 6px solid transparent;
	border-top-color: currentColor;
	position: relative;
	top: 5px;
	margin-left: 8px;
}

a > svg {
	fill: rgba(255, 255, 255, 0.2);
}

.hidden-select {
	opacity: 0;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.btn {
	display: inline-block;
	color: var(--color-button);
	font-size: inherit;
	background: transparent;
	border: 3px solid var(--color-button);
	border-radius: 5px;
	padding: 9px 15px;
	cursor: pointer;
	letter-spacing: 0.2px;
	line-height: 1;
	white-space: nowrap;
	text-align: center;
	box-sizing: border-box;
	transition: box-shadow 0.2s ease;
}

.btn--primary {
	background: var(--color-button)
		linear-gradient(180deg, rgba(0, 0, 0, 0.15) 0px, transparent);
	color: black;
	font-weight: 600;
}

.btn--big {
	padding: 15px 30px;
	border-radius: 3px;
}

.btn-icon {
	display: inline-flex;
	align-items: center;
}

.btn:hover {
	text-decoration: none;
	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.25);
}

*:focus {
	outline-width: 4px;
	outline-color: var(--color-button);
	outline-style: solid;
	outline-offset: 1px;
}

.btn-icon > svg {
	width: 20px;
	height: 20px;
	fill: currentColor;
	vertical-align: middle;
	margin-right: 8px;
}

.btn--big > svg {
	width: 25px;
	height: 25px;
	margin-right: 12px;
}

.btn-loader {
	display: none;
}

.is-loading > svg {
	display: none;
}

.is-loading .btn-loader {
	display: block;
}

.star:after {
	content: '★';
	color: currentColor;
}

/* used to show keyboard specific content when something is keyboard focused */

.show-when-selected {
	display: none;
}

.selected .show-when-selected {
	display: inline-block;
}

.main-container {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	transition: 0.1s ease 0.2s;
	will-change: filter;
}

body:not(.light-version).overlay-visible .main-container {
	transition-duration: 0.5s;
	transition-delay: 0.4s;
	filter: blur(3px);
}

.content-wrap {
	/* HACK:  */
	height: 1px;
	/* HACK: 70px is approx header+footer. This is required to because
	on FF the content-wrap goes beyond the flex parent otherwise. */
	max-height: calc(100% - 70px);
}

.code-side,
.demo-side {
	flex-basis: inherit;
	position: relative;
	width: 50%;
}

.demo-side .promotion {
	height: 35px;
	line-height: 35px;
}

div.toolbox>svg {
	margin: 5px;
}

.layout-3 .content-wrap {
	flex-direction: row-reverse;
}

.code-side {
	display: flex;
	flex-direction: column;
}

.layout-2 .content-wrap {
	flex-direction: column;
}

.layout-2 .code-side {
	flex-direction: row;
	width: auto;
}

.layout-2 .demo-side {
	width: auto;
}

/* All vertical layout */

.layout-5 .code-side {
	flex-direction: row;
	width: auto;
}

.layout-5 .code-wrap {
	height: auto;
}

/* Fullscreen layout */

.layout-4 .code-side {
	display: none;
}

.layout-4 .code-side + .gutter {
	display: none;
}

.layout-4 .demo-side {
	width: 100% !important;
}

.is-detached-mode .demo-side {
	/* display: none; */
	width: 0px !important;
	height: 0px !important;
}

.is-detached-mode .code-side {
	width: 100% !important;
}

.is-detached-mode.layout-2 .code-side {
	height: auto !important;
}

.code-wrap {
	display: flex;
	flex-direction: column;
	flex-basis: inherit;
	height: 100%;
	overflow: hidden;
	position: relative;
	background: var(--color-bg);
	transition: height 0.3s ease, width 0.3s ease;
	will-change: height;
}

.layout-2 .code-wrap.is-minimized,
.layout-5 .code-wrap.is-minimized {
	flex-direction: row;
}

.is-dragging .code-wrap {
	transition: none;
}
/* ... */

