fix a problem that loading icon will cause the btn jumping

--- a/src/style.css
+++ b/src/style.css
@@ -309,7 +309,7 @@ a > svg {
 }
 
 .is-loading .btn-loader {
-	display: block;
+	display: inline-block;
 }
 
 .star:after {
